Added option to save simulation results

--- a/SFSimulator.Frontend/Components/SfIcon.razor
+++ b/SFSimulator.Frontend/Components/SfIcon.razor
@@ -60,5 +60,6 @@
        { "Runes", "runes_icon.png" },
        { "SoloPortal", "soloportal_icon.png" },
        { "GuildPortal", "guildportal_icon.png" },
+       { "Heart", "heart_icon.png" }
     };
 }
