--- a/SFSimulator.Frontend/Pages/SimulatorPage/SimulationOptions.razor
+++ b/SFSimulator.Frontend/Pages/SimulatorPage/SimulationOptions.razor
@@ -1,10 +1,9 @@
 ﻿<RadzenCard class="rz-w-fit-content rz-p-0 bg-card" Style="max-width: 100%;">
     <RadzenRow JustifyContent="JustifyContent.SpaceBetween" Style="padding: 0.5rem 1rem; border-radius: var(--rz-card-border-radius);">
         <RadzenText TextStyle="TextStyle.H5" Text="Simulator" Style="align-self: center; margin-bottom: 0;"/>
-        <div>
-            <RadzenButton Variant="Variant.Text" ButtonStyle="ButtonStyle.Base" Click="OpenEndpoint"><SfIcon Icon="Endpoint"/><span class="rz-ms-2">Endpoint</span></RadzenButton>
-            <RadzenButton Variant="Variant.Text" ButtonStyle="ButtonStyle.Base"><SfIcon Icon="Load"/><span class="rz-ms-2">Load</span></RadzenButton>
-        </div>
+        <span style="margin: 0 auto;"></span>
+        <RadzenButton Variant="Variant.Outlined" ButtonStyle="ButtonStyle.Warning" Click="OpenEndpoint"><SfIcon Icon="Endpoint"/><span class="rz-ms-2">Endpoint</span></RadzenButton>
+        <RadzenButton Variant="Variant.Outlined" ButtonStyle="ButtonStyle.Primary"><SfIcon Icon="Load"/><span class="rz-ms-2">Load</span></RadzenButton>
     </RadzenRow>
     <RadzenTemplateForm TItem="SimulationContext" Data="Options" Submit="Submit" Style="width: 100%;height:100%;">
         <ChildContent Context="ctx">
